--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="about-me" class="container">
       <div>
         <!-- https://miro.medium.com/max/1400/1*qdAW1TjCN57h1lbuuzvchg.gif -->
-        <img src="html_finalprojimages/jacob_isaacs_headshot.png" class="profile_image"/>
+        <img src="html_finalprojimages/JacobIsaacs_3_Profile.jpg" class="profile_image"/>
       </div>
 
       <div>
