--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div>
           <h1>
-            Hi, I'm Jacob Isaacs! THIS IS A TEST <!--  <img src="https://twemoji.maxcdn.com/2/72x72/1f44b.png" width="60px"/> -->
+            Hi, I'm Jacob Isaacs! <!--  <img src="https://twemoji.maxcdn.com/2/72x72/1f44b.png" width="60px"/> -->
           </h1>
           <p>
             I am a man of many hats, I would define myself as a developer, analyst, artist, and gardner.
